--- a/iucr.bib
+++ b/iucr.bib
@@ -272,3 +272,50 @@ month = "Nov",
 doi = {10.1107/S160057751901213X},
 url = {https://doi.org/10.1107/S160057751901213X},
 }
+
+@article{ID16A,
+    author = {J. C. da Silva and A. Pacureanu and Y. Yang and S. Bohic and C. Morawe and R. Barrett and P. Cloetens},
+    journal = {Optica},
+    keywords = {Instruments, apparatus, and components common to the sciences; X-ray imaging; X-ray microscopy; X-ray mirrors; Wave propagation},
+    number = {5},
+    pages = {492--495},
+    publisher = {OSA},
+    title = {Efficient concentration of high-energy x-rays for diffraction-limited imaging resolution},
+    volume = {4},
+    month = {May},
+    year = {2017},
+    url = {http://doi.org/10.1364/OPTICA.4.000492},
+    doi = {10.1364/OPTICA.4.000492},
+}
+
+@article{geloni2008,
+title = "Transverse coherence properties of X-ray beams in third-generation synchrotron radiation sources",
+journal = "Nucl. Instr. and Meth. A",
+volume = "588",
+number = "3",
+pages = "463 - 493",
+year = "2008",
+note = "",
+issn = "0168-9002",
+doi = "http://dx.doi.org/10.1016/j.nima.2008.01.089",
+url = "http://dx.doi.org/10.1016/j.nima.2008.01.089",
+author = "Gianluca Geloni and Evgeni Saldin and Evgeni Schneidmiller and Mikhail Yurkov",
+keywords = "X-ray beams",
+keywords = "Undulator radiation",
+keywords = "Transverse coherence",
+keywords = "van Cittert–Zernike theorem",
+keywords = "Emittance effects"
+}
+
+@article{Brumund,
+author = "Brumund, Philipp and Reyes-Herrera, Juan and Detlefs, Carsten and Morawe, Christian and Sanchez del Rio, Manuel and Chumakov, Aleksandr I.",
+title = "{Design simulations of a horizontally deflecting high-heat-load monochromator}",
+journal = "Journal of Synchrotron Radiation",
+year = "2021",
+volume = "28",
+number = "1",
+pages = "91--103",
+month = "Jan",
+doi = {10.1107/S1600577520014009},
+url = {https://doi.org/10.1107/S1600577520014009},
+}
