changes after Rafael's comments

--- a/iucr.bib
+++ b/iucr.bib
@@ -225,6 +225,33 @@ keywords = {hybrid method, beamline design, X-ray optics simulation, ray-tracing
     year = {1998},
 }
 
+@article{codeSRW_ME,
+    author = {Chubar, Oleg and Berman, Lonny and Chu, Yong S. and Fluerasu, Andrei and Hulbert, Steve and Idir, Mourad and Kaznatcheev, Konstantine and Shapiro, David and Shen, Qun and Baltser, Jana},
+    doi = {10.1117/12.892812},
+    journal = {Proc. SPIE 8141, Advances in Computational Methods for X-Ray Optics II},
+    pages = {814107},
+    title = {{Development of partially-coherent wavefront propagation simulation methods for 3rd and 4th generation synchrotron radiation sources}},
+    url = {http://proceedings.spiedigitallibrary.org/proceeding.aspx?doi=10.1117/12.892812},
+    year = {2011},
+}
+
+@article{codeSRW_CSR,
+    author = {Chubar, O.},
+    doi = {10.1016/j.infrared.2006.01.010},
+    issn = {13504495},
+    journal = {Infrared Physics & Technology},
+    mendeley-groups = {X-ray physics/Optics/_optical simulations},
+    month = {sep},
+    number = {1-2},
+    pages = {96--103},
+    title = {{Simulation of emission and propagation of coherent synchrotron radiation wave fronts using the methods of wave optics}},
+    url = {https://linkinghub.elsevier.com/retrieve/pii/S1350449506000120},
+    volume = {49},
+    year = {2006}
+}
+
+
+
 @article{codeSHADOW,
     author = {Sanchez del Rio, M. and Canestrari, N. and Jiang, F. and Cerrina, F.},
     title = {{\it SHADOW3}: a new version of the synchrotron X-ray optics modelling package},
@@ -261,16 +288,16 @@ keywords = {hybrid method, beamline design, X-ray optics simulation, ray-tracing
 }
 
 @article{hierarchical,
-author = "Sanchez del Rio, Manuel and Celestre, Rafael and Glass, Mark and Pirro, Giovanni and Herrera, Juan Reyes and Barrett, Ray and da Silva, Julio Cesar and Cloetens, Peter and Shi, Xianbo and Rebuffi, Luca",
-title = "{A hierarchical approach for modeling X-ray beamlines: application to a coherent beamline}",
-journal = "Journal of Synchrotron Radiation",
-year = "2019",
-volume = "26",
-number = "6",
-pages = "1887--1901",
-month = "Nov",
-doi = {10.1107/S160057751901213X},
-url = {https://doi.org/10.1107/S160057751901213X},
+    author = "Sanchez del Rio, Manuel and Celestre, Rafael and Glass, Mark and Pirro, Giovanni and Herrera, Juan Reyes and Barrett, Ray and da Silva, Julio Cesar and Cloetens, Peter and Shi, Xianbo and Rebuffi, Luca",
+    title = "{A hierarchical approach for modeling X-ray beamlines: application to a coherent beamline}",
+    journal = "Journal of Synchrotron Radiation",
+    year = "2019",
+    volume = "26",
+    number = "6",
+    pages = "1887--1901",
+    month = "Nov",
+    doi = {10.1107/S160057751901213X},
+    url = {https://doi.org/10.1107/S160057751901213X},
 }
 
 @article{ID16A,
@@ -318,4 +345,107 @@ pages = "91--103",
 month = "Jan",
 doi = {10.1107/S1600577520014009},
 url = {https://doi.org/10.1107/S1600577520014009},
+}
+
+@book{paganin_book,
+  title={Coherent X-Ray Optics},
+  author={Paganin, D. M.},
+  year={2006},
+  publisher={Oxford University Press}
+}
+
+@article{Yabashi,
+author = "Yabashi, Makina and Tono, Kensuke and Mimura, Hidekazu and Matsuyama, Satoshi and Yamauchi, Kazuto and Tanaka, Takashi and Tanaka, Hitoshi and Tamasaku, Kenji and Ohashi, Haruhiko and Goto, Shunji and Ishikawa, Tetsuya",
+title = "{Optics for coherent X-ray applications}",
+journal = "Journal of Synchrotron Radiation",
+year = "2014",
+volume = "21",
+number = "5",
+pages = "976--985",
+month = "Sep",
+doi = {10.1107/S1600577514016415},
+url = {https://doi.org/10.1107/S1600577514016415},
+}
+
+@article{Schroer_adiabatic,
+  title = {Focusing Hard X Rays to Nanometer Dimensions by Adiabatically Focusing Lenses},
+  author = {Schroer, C. G. and Lengeler, B.},
+  journal = {Phys. Rev. Lett.},
+  volume = {94},
+  issue = {5},
+  pages = {054802},
+  numpages = {4},
+  year = {2005},
+  month = {Feb},
+  publisher = {American Physical Society},
+  doi = {10.1103/PhysRevLett.94.054802},
+  url = {https://link.aps.org/doi/10.1103/PhysRevLett.94.054802}
+}
+
+@article{Celestre:mo5214,
+author = "Celestre, Rafael and Berujon, Sebastien and Roth, Thomas and Sanchez del Rio, Manuel and Barrett, Raymond",
+title = "{Modelling phase imperfections in compound refractive lenses}",
+journal = "Journal of Synchrotron Radiation",
+year = "2020",
+volume = "27",
+number = "2",
+pages = "305--318",
+month = "Mar",
+doi = {10.1107/S1600577519017235},
+url = {https://doi.org/10.1107/S1600577519017235},
+}
+
+@article{ChubarElleaumeSnigirev2001,
+title = {Phase corrections for synchrotron radiation},
+journal = {Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+volume = {467-468},
+pages = {932-935},
+year = {2001},
+note = {Proceedings of the 7th Int. Conf. on Synchrotron Radiation Instru mentation},
+issn = {0168-9002},
+doi = {https://doi.org/10.1016/S0168-9002(01)00529-0},
+url = {https://www.sciencedirect.com/science/article/pii/S0168900201005290},
+author = {O. Chubar and P. Elleaume and A. Snigirev},
+keywords = {Synchrotron radiation, Wavefront, Focusing},
+}
+
+@article{Vaughan:kv5084,
+author = "Vaughan, Gavin B. M. and Wright, Jonathan P. and Bytchkov, Aleksei and Rossat, Michel and Gleyzolle, Henri and Snigireva, Irina and Snigirev, Anatoly",
+title = "{X-ray transfocators: focusing devices based on compound refractive lenses}",
+journal = "Journal of Synchrotron Radiation",
+year = "2011",
+volume = "18",
+number = "2",
+pages = "125--133",
+month = "Mar",
+doi = {10.1107/S0909049510044365},
+url = {https://doi.org/10.1107/S0909049510044365},
+}
+
+@book{Wiedemann2015,
+    author = {Wiedemann, Helmut},
+    doi = {10.1007/978-3-319-18317-6},
+    edition = {Forth},
+    isbn = {978-3-319-18316-9},
+    mendeley-groups = {X-ray physics/Books},
+    publisher = {Springer International Publishing},
+    series = {Graduate Texts in Physics},
+    title = {{Particle Accelerator Physics}},
+    url = {http://link.springer.com/10.1007/978-3-319-18317-6},
+    year = {2019}
+}
+
+@article{Chubar1995,
+    author = {Chubar, O.},
+    doi = {10.1063/1.1145810},
+    issn = {0034-6748},
+    journal = {Review of Scientific Instruments},
+    mendeley-groups = {X-ray physics/Optical simulations},
+    month = {feb},
+    number = {2},
+    pages = {1872},
+    title = {{Precise computation of electron‐beam radiation in nonuniform magnetic fields as a tool for beam diagnostics}},
+    url = {http://aip.scitation.org/doi/10.1063/1.1145810},
+    volume = {66},
+    year = {1995}
 }
