before reformatting absorption table

--- a/iucr.bib
+++ b/iucr.bib
@@ -239,7 +239,7 @@ keywords = {hybrid method, beamline design, X-ray optics simulation, ray-tracing
     author = {Chubar, O.},
     doi = {10.1016/j.infrared.2006.01.010},
     issn = {13504495},
-    journal = {Infrared Physics & Technology},
+    journal = {Infrared Physics \& Technology},
     mendeley-groups = {X-ray physics/Optics/_optical simulations},
     month = {sep},
     number = {1-2},
@@ -448,4 +448,30 @@ url = {https://doi.org/10.1107/S0909049510044365},
     url = {http://aip.scitation.org/doi/10.1063/1.1145810},
     volume = {66},
     year = {1995}
+}
+
+@article{Roth2017,
+    author = {Roth, Thomas and Alianelli, Lucia and Lengeler, Daniel and Snigirev, Anatoly and Seiboth, Frank},
+    doi = {10.1557/mrs.2017.117},
+    issn = {0883-7694},
+    journal = {MRS Bulletin},
+    mendeley-groups = {X-ray physics/Optics/Refractive optics/CRL},
+    month = {jun},
+    number = {06},
+    pages = {430--436},
+    title = {{Materials for x-ray refractive lenses minimizing wavefront distortions}},
+    url = {https://www.cambridge.org/core/product/identifier/S0883769417001178},
+    volume = {42},
+    year = {2017}
+}
+
+@article{codeSRW_MEscan,
+    author = {A. He and O. Chubar and M. Rakitin and L. Samoylova and C. Fortmann-Grote and S. Yakubov and A. Buzmakov},
+    title = {{Parallel performance of "Synchrotron Radiation Workshop" code: partially coherent calculations for storage rings and time-dependent calculations for XFELs}},
+    journal = {Proc. SPIE 11493, Advances in Computational Methods for X-Ray Optics V},
+    pages = {78 -- 87},
+    year = {2020},
+    doi = {10.1117/12.2567448},
+    URL = {https://doi.org/10.1117/12.2567448}
+    
 }
